# videq

./: README.md  pyproject.toml  requirements.txt
vidoza_downloader/: downloader.py  logger.py  main.py  network.py  parser.py  utils.py
